fix: visible links on old browsers
older browsers don't support light-dark, so links appear the same color as normal text. this makes linked text underlined on unsupported browsers to make it more visible

--- a/dev.css
+++ b/dev.css
@@ -196,6 +196,12 @@ a:hover {
 	text-decoration: underline;
 }
 
+@supports not (light-dark()) {
+	a {
+		text-decoration: underline;
+	}
+}
+
 mark {
 	border-radius: 0.375rem;
 	padding: 0.125rem 0.25rem;
